style: reduce poke image large name width to prevent horizontal scroll

--- a/src/features/pokemon/pokemon-details/pokemon-details.module.scss
+++ b/src/features/pokemon/pokemon-details/pokemon-details.module.scss
@@ -56,7 +56,7 @@
 
   & div:first-child {
     position: absolute;
-    width: 99vw;
+    width: 95vw;
     overflow: hidden;
     display: flex;
     justify-content: center;
